# cockroach

./: ARCHITECTURE_DIAGRAMS.md  COCKROACH_CLOUD_PROVIDER_GUIDE.md  COMPLETION_STATUS.md  IMPLEMENTATION_SUMMARY.md
.github/agents/: one-shot-resolve.agent.md
pkg/cli/: BUILD.bazel  start.go
pkg/roachprod/: BUILD.bazel  roachprod.go
pkg/roachprod/vm/ccloud/: BUILD.bazel  README.md  provider.go  provider_opts.go  provider_test.go
pkg/server/: server.go  tenant.go
pkg/util/numa/: BUILD.bazel  numa.go  numa_linux.go  numa_linux_test.go  numa_other.go  numa_test.go
pkg/util/system/: BUILD.bazel  numa.go  numa_notlinux.go  numa_test.go
pkg/util/sysutil/: sysutil.go  sysutil_test.go
