load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "numa",
    srcs = ["numa.go"],
    importpath = "github.com/cockroachdb/cockroach/pkg/util/numa",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_cockroachdb_errors//:errors",
    ],
)

go_test(
    name = "numa_test",
    size = "small",
    srcs = ["numa_test.go"],
    embed = [":numa"],
    deps = [
        "@com_github_stretchr_testify//require",
    ],
)
