load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "numa",
    srcs = [
        "numa.go",
        "numa_linux.go",
        "numa_other.go",
    ],
    importpath = "github.com/cockroachdb/cockroach/pkg/util/numa",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_cockroachdb_errors//:errors",
    ],
)

go_test(
    name = "numa_test",
    size = "small",
    srcs = ["numa_linux_test.go"],
    embed = [":numa"],
    deps = [
        "@com_github_stretchr_testify//require",
    ],
)
